[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = pydirtygrid
description = Astropy affiliated package
long_description = This is a package for accessing the DirtyGrid computations that relies on astropy
author = Karl Gordon
author_email = kgordon@stsci.edu
license = BSD
url = http://www.stsci.edu/~kgordon/DirtyGrid/DirtyGrid.html
edit_on_github = False
github_project = astropy/astropy

[entry_points]
astropy-package-template-example = pydirtygrid.example_mod:main